--- a/main.html
+++ b/main.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <title>Quiz App</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
 
@@ -10,6 +12,6 @@
     <button id="submit">Submit</button>
     <div id="score"></div>
 
-    <script type="text/javascript" src="./script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
